Pagination overflow prevention system implemented.

--- a/src/css/list.css
+++ b/src/css/list.css
@@ -9,3 +9,8 @@ tr.list-row {
 .glyphicon-trash:hover {
     color: red !important;
 }
+
+table {
+    (
+white-space:nowrap;overflow: hidden;
+}
